--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,28 +21,20 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':library')
     testCompile 'junit:junit:4.12'
-    // must include support libs
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
-    // for consuming api
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.okhttp:okhttp:2.7.0'
-    // event bus
     compile 'com.squareup:otto:1.3.8'
-    // for image
     compile 'com.squareup.picasso:picasso:2.5.2'
-    // for ui
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
-
-    // for round imageView
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    // for realtive scalable density pixel
-    compile 'com.intuit.sdp:sdp-android:1.0.2'
+    compile 'com.willowtreeapps:oak-library:1.3.7'
 
-    compile project(':library')
 }
