--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.willowtreeapps:oak-library:1.3.7'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 
 }
