--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidyug.marsscope" >
+    package="com.androidyug.marsrover" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".MarsScope"
+        android:name=".MarsRover"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name="com.androidyug.marsrover.ui.main.MainActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".ui.selectrover.SelectRoverActivity"
+            android:name="com.androidyug.marsrover.ui.selectrover.SelectRoverActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         </activity>
         <activity
-            android:name=".ui.main.HomeActivity"
+            android:name="com.androidyug.marsrover.ui.main.HomeActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,10 +32,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.detail.PhotoDetailActivity"
+            android:name="com.androidyug.marsrover.ui.detail.PhotoDetailActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         </activity>
-        <activity android:name=".ui.intro.IntroActivity" >
+        <activity android:name="com.androidyug.marsrover.ui.intro.IntroActivity" >
         </activity>
     </application>
 
