--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'android_store_key'
-            keyPassword 'Xn1t1n_07'
-            storeFile file('C:/Users/IAMONE/Desktop/keystore_path/android_store_key.jks')
-            storePassword 'Xn1t1n_07'
-        }
-    }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+//    signingConfigs {
+//        config {
+//            keyAlias 'android_store_key'
+//            keyPassword 'Xn1t1n_07'
+//            storeFile file('C:/Users/IAMONE/Desktop/keystore_path/android_store_key.jks')
+//            storePassword 'Xn1t1n_07'
+//        }
+//    }
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.androidyug.marsrover"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -22,29 +21,34 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+//            signingConfig signingConfigs.config
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-    compile 'com.squareup.okhttp:okhttp:2.7.0'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.willowtreeapps:oak-library:1.3.7'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.easing:library:1.0.1@aar'
-    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':library')
+    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.android.support:design:26.0.1'
+    implementation 'com.google.code.gson:gson:2.4'
+    implementation 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    implementation 'com.squareup.okhttp:okhttp:2.7.0'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.android.support:cardview-v7:26.0.1'
+    implementation 'com.android.support:recyclerview-v7:26.0.1'
+    implementation 'de.hdodenhof:circleimageview:2.0.0'
+    implementation 'com.willowtreeapps:oak-library:1.3.7'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.easing:library:1.0.1@aar'
+    implementation 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
